--- a/src/main/resources/application-prd.properties
+++ b/src/main/resources/application-prd.properties
@@ -1,13 +1,9 @@
-spring.application.name=mvc-rh
 server.port=8080
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:mysql://localhost:3306/rh?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=root_pwd
+
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=create
-spring.sql.init.mode=always
-spring.jpa.defer-datasource-initialization=true
+spring.jpa.open-in-view=true
