--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -10,3 +10,4 @@ spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=create
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
+spring.sql.init.data-location=classpath:scripts/data-dev.sql
