--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.jpa.hibernate.ddl-auto=create
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 spring.thymeleaf.cache=false
+spring.sql.init.data-locations=classpath:scripts/data-dev.sql
